src/express/generated/expscan.c
/* Generated by re2c 3.1 */
/*
 * expscan.re - Direct re2c scanner for the EXPRESS language.
 *
 * This file is the direct re2c source for the EXPRESS lexical analyser.
 * It replaces the old expscan.l (perplex/flex format) and is compiled
 * directly by re2c to produce expscan.c, eliminating the need for perplex.
 *
 * Run:
 *   re2c --no-debug-info --no-generation-date -c \
 *        -Wno-condition-order -o expscan.c expscan.re
 *
 * Original scanner by U.S. Government employees; not subject to copyright.
 */

#include <ctype.h>
#if !defined(isascii) && defined(__isascii)
#  define isascii __isascii
#endif
#include "express/basic.h"
#include "express/error.h"
#include "express/lexact.h"
#include "express/express.h"
#include "expparse.h"
#include "expscan.h"

/* yylineno is maintained by NEWLINE macro; yyeof unused but referenced */
extern int  yylineno;
extern bool yyeof;

/* Nesting depth for (* ... *) comments */
static int nesting_level = 0;

/* can't imagine this will ever be more than 2 or 3 - DEL */
#define MAX_NESTED_COMMENTS 20
static struct Symbol_ open_comment[MAX_NESTED_COMMENTS];

/* Current filename (kept in sync with SCANbuffer by SCAN_lex_init) */
extern const char *current_filename;

/* -----------------------------------------------------------------------
 * re2c configuration macros
 * All macros use `scanner` as the variable name for the perplex_t argument.
 * --------------------------------------------------------------------- */

#define YYCTYPE           char
#define YYCURSOR          (scanner->cursor)
#define YYMARKER          (scanner->marker)
#define YYLIMIT           (scanner->null)
#define YYFILL(n)         bufferFill(scanner, (n))
#define YYGETCONDITION()  (scanner->cond)
#define YYSETCONDITION(c) (scanner->cond = (c))

/* Increment line counter */
#define NEWLINE  (yylineno++)

/* When lex looks ahead over a newline, error messages get thrown off.
 * Fortunately we know when that occurs, so adjust for it. */
#define LINENO_FUDGE  (yylineno - 1)

/* Token-start management: must be bare statements so that `continue` below
 * reaches the outer while(1) loop and is not trapped by any do-while. */
#define UPDATE_START   (scanner->tok = scanner->cursor)

/* Skip a token and restart the scanner loop.
 * Note: NO do-while wrapper; `continue` must reach the outer while(1). */
#define IGNORE_TOKEN   UPDATE_START; continue

/* Get null-terminated copy of current token text */
#define yytext  getTokenText(scanner)

/* -----------------------------------------------------------------------
 * SCAN_lex_init - (Re-)initialise scanner state for a new file.
 * --------------------------------------------------------------------- */
void
SCAN_lex_init(char *filename, FILE *fp)
{
    /* Return to initial scan buffer */
    SCAN_current_buffer = 0;
    *(SCANcurrent = SCANbuffer.text) = '\0';
    SCANbuffer.readEof = false;
    SCANbuffer.file = fp;
    SCANbuffer.filename = (filename ? filename : "");
    current_filename = SCANbuffer.filename;
}

/* -----------------------------------------------------------------------
 * Private inner scanner - contains the re2c generated state machine.
 *
 * NOTE: No <*> rules are used here because they conflict with the empty-
 * string <INITIAL> transition.  Common rules (whitespace, "(*") are
 * written separately per condition.
 *
 * NOTE: IGNORE_TOKEN must NOT be wrapped in do-while; the bare `continue`
 * must reach the outer while(1) loop directly.
 * --------------------------------------------------------------------- */
static int
yylex_private(perplex_t scanner)
{
    while (1) {
        /* Check for end of input */
        if (scanner->atEOI && scanner->cursor >= scanner->null) {
            return YYEOF;
        }

        /* Reset token start for each new token */
        scanner->tok = scanner->cursor;

        
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	switch (YYGETCONDITION()) {
		case yycINITIAL: goto yyc_INITIAL;
		case yyccode: goto yyc_code;
		case yycreturn_end_schema: goto yyc_return_end_schema;
		case yyccomment: goto yyc_comment;
	}
/* *********************************** */
yyc_INITIAL:
	YYSETCONDITION(yyccode);
	{ continue; }
/* *********************************** */
yyc_code:
	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy4;
		case '\n': goto yy6;
		case '"': goto yy7;
		case '$':
		case '&':
		case '@':
		case '^':
		case '~': goto yy8;
		case '%': goto yy9;
		case '\'': goto yy10;
		case '(': goto yy11;
		case ')': goto yy13;
		case '*': goto yy14;
		case '+': goto yy16;
		case ',': goto yy17;
		case '-': goto yy18;
		case '.': goto yy20;
		case '/': goto yy21;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		case ':': goto yy24;
		case ';': goto yy26;
		case '<': goto yy28;
		case '=': goto yy30;
		case '>': goto yy31;
		case '?': goto yy33;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy34;
		case '[': goto yy36;
		case '\\': goto yy37;
		case ']': goto yy38;
		case '_': goto yy39;
		case '{': goto yy41;
		case '|': goto yy42;
		case '}': goto yy44;
		default: goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
	{ IGNORE_TOKEN; }
yy4:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
	{ IGNORE_TOKEN; }
yy6:
	++YYCURSOR;
	{ NEWLINE; IGNORE_TOKEN; }
yy7:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\n': goto yy45;
		case '"': goto yy46;
		default: goto yy7;
	}
yy8:
	++YYCURSOR;
	{
            ERRORreport_with_line(UNEXPECTED_CHARACTER, yylineno, yytext[0]);
            IGNORE_TOKEN;
        }
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1': goto yy47;
		default: goto yy3;
	}
yy10:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\n': goto yy49;
		case '\'': goto yy50;
		default: goto yy10;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case '*': goto yy52;
		default: goto yy12;
	}
yy12:
	{ return TOK_LEFT_PAREN; }
yy13:
	++YYCURSOR;
	{ return TOK_RIGHT_PAREN; }
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case ')': goto yy53;
		case '*': goto yy54;
		default: goto yy15;
	}
yy15:
	{ return TOK_TIMES; }
yy16:
	++YYCURSOR;
	{ return TOK_PLUS; }
yy17:
	++YYCURSOR;
	{ return TOK_COMMA; }
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy55;
		default: goto yy19;
	}
yy19:
	{ return TOK_MINUS; }
yy20:
	++YYCURSOR;
	{ return TOK_DOT; }
yy21:
	++YYCURSOR;
	{ return TOK_REAL_DIV; }
yy22:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '.': goto yy56;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		default: goto yy23;
	}
yy23:
	{
            return SCANprocess_integer_literal(yytext);
        }
yy24:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '<': goto yy58;
		case '=': goto yy60;
		default: goto yy25;
	}
yy25:
	{ return TOK_COLON; }
yy26:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case '\t':
		case ' ': goto yy62;
		case '-': goto yy63;
		default: goto yy27;
	}
yy27:
	{ return SCANprocess_semicolon(yytext, 0); }
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
		case '*': goto yy64;
		case '=': goto yy65;
		case '>': goto yy66;
		default: goto yy29;
	}
yy29:
	{ return TOK_LESS_THAN; }
yy30:
	++YYCURSOR;
	{ return TOK_EQUAL; }
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy67;
		default: goto yy32;
	}
yy32:
	{ return TOK_GREATER_THAN; }
yy33:
	++YYCURSOR;
	{ return TOK_QUESTION_MARK; }
yy34:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy34;
		default: goto yy35;
	}
yy35:
	{
            return SCANprocess_identifier_or_keyword(yytext);
        }
yy36:
	++YYCURSOR;
	{ return TOK_LEFT_BRACKET; }
yy37:
	++YYCURSOR;
	{ return TOK_BACKSLASH; }
yy38:
	++YYCURSOR;
	{ return TOK_RIGHT_BRACKET; }
yy39:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy39;
		default: goto yy40;
	}
yy40:
	{
            ERRORreport_with_line(BAD_IDENTIFIER, yylineno, yytext);
            return SCANprocess_identifier_or_keyword(yytext);
        }
yy41:
	++YYCURSOR;
	{ return TOK_LEFT_CURL; }
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case '|': goto yy68;
		default: goto yy43;
	}
yy43:
	{ return TOK_SUCH_THAT; }
yy44:
	++YYCURSOR;
	{ return TOK_RIGHT_CURL; }
yy45:
	++YYCURSOR;
	{
            ERRORreport_with_line(UNTERMINATED_STRING, LINENO_FUDGE);
            NEWLINE;
            return SCANprocess_encoded_string(yytext);
        }
yy46:
	++YYCURSOR;
	{
            return SCANprocess_encoded_string(yytext);
        }
yy47:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1': goto yy47;
		default: goto yy48;
	}
yy48:
	{
            return SCANprocess_binary_literal(yytext);
        }
yy49:
	++YYCURSOR;
	{
            ERRORreport_with_line(UNTERMINATED_STRING, LINENO_FUDGE);
            NEWLINE;
            return SCANprocess_string(yytext);
        }
yy50:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\'': goto yy10;
		default: goto yy51;
	}
yy51:
	{
            return SCANprocess_string(yytext);
        }
yy52:
	++YYCURSOR;
	YYSETCONDITION(yyccomment);
	{
            if (nesting_level < MAX_NESTED_COMMENTS) {
                open_comment[nesting_level].line     = yylineno;
                open_comment[nesting_level].filename = current_filename;
            }
            nesting_level++;
            IGNORE_TOKEN;
        }
yy53:
	++YYCURSOR;
	{
            ERRORreport_with_line(UNMATCHED_CLOSE_COMMENT, yylineno);
            IGNORE_TOKEN;
        }
yy54:
	++YYCURSOR;
	{ return TOK_EXP; }
yy55:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\n': goto yy69;
		default: goto yy55;
	}
yy56:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy56;
		case 'E':
		case 'e': goto yy70;
		default: goto yy57;
	}
yy57:
	{
            return SCANprocess_real_literal(yytext);
        }
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
		case '>': goto yy71;
		default: goto yy59;
	}
yy59:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
		case 0: goto yy25;
		case 1: goto yy27;
		default: goto yy57;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
		case ':': goto yy72;
		default: goto yy61;
	}
yy61:
	{ return TOK_ASSIGNMENT; }
yy62:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy62;
		case '-': goto yy63;
		default: goto yy59;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case '-': goto yy73;
		default: goto yy59;
	}
yy64:
	++YYCURSOR;
	{ return TOK_ALL_IN; }
yy65:
	++YYCURSOR;
	{ return TOK_LESS_EQUAL; }
yy66:
	++YYCURSOR;
	{ return TOK_NOT_EQUAL; }
yy67:
	++YYCURSOR;
	{ return TOK_GREATER_EQUAL; }
yy68:
	++YYCURSOR;
	{ return TOK_CONCAT_OP; }
yy69:
	++YYCURSOR;
	{
            NEWLINE;
            SCANsave_comment(yytext);
            IGNORE_TOKEN;
        }
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
		case '+':
		case '-': goto yy74;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy75;
		default: goto yy59;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case ':': goto yy76;
		default: goto yy59;
	}
yy72:
	++YYCURSOR;
	{ return TOK_INST_EQUAL; }
yy73:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\n': goto yy77;
		default: goto yy73;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy75;
		default: goto yy59;
	}
yy75:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy75;
		default: goto yy57;
	}
yy76:
	++YYCURSOR;
	{ return TOK_INST_NOT_EQUAL; }
yy77:
	++YYCURSOR;
	{
            NEWLINE;
            return SCANprocess_semicolon(yytext, 1);
        }
/* *********************************** */
yyc_return_end_schema:
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy81;
		case '\n': goto yy83;
		case '(': goto yy84;
		case 'X': goto yy85;
		default: goto yy79;
	}
yy79:
	++YYCURSOR;
yy80:
	{ IGNORE_TOKEN; }
yy81:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy81;
		default: goto yy82;
	}
yy82:
	{ IGNORE_TOKEN; }
yy83:
	++YYCURSOR;
	{ NEWLINE; IGNORE_TOKEN; }
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
		case '*': goto yy86;
		default: goto yy80;
	}
yy85:
	++YYCURSOR;
	YYSETCONDITION(yyccode);
	{
            return TOK_END_SCHEMA;
        }
yy86:
	++YYCURSOR;
	YYSETCONDITION(yyccomment);
	{
            if (nesting_level < MAX_NESTED_COMMENTS) {
